--- a/src/lib/i18n/ru/congregation.json
+++ b/src/lib/i18n/ru/congregation.json
@@ -15,8 +15,7 @@
     "note": "Если участники должны заранее запросить доступ, пожалуйста, добавьте эту информацию в поле \"Другое\".",
     "online_asl": "Язык жестов-переводчиков, онлайн",
     "online_automatedCaptions": "Автоматические титры, онлайн",
-    "online_liveCaptions": "Живые субтитры, онлайн",
-    "short": ""
+    "online_liveCaptions": "Живые субтитры, онлайн"
   },
   "add": "Добавить",
   "addCongregation": "Добавить прихожан",
