--- a/src/lib/i18n/uk/congregation.json
+++ b/src/lib/i18n/uk/congregation.json
@@ -15,8 +15,7 @@
     "note": "Якщо учасники повинні заздалегідь попросити про доступність, будь ласка, додайте цю інформацію в поле \"Інше\".",
     "online_asl": "Переклад жестовою мовою, онлайн",
     "online_automatedCaptions": "Автоматичні субтитри, онлайн",
-    "online_liveCaptions": "Живі субтитри, онлайн",
-    "short": ""
+    "online_liveCaptions": "Живі субтитри, онлайн"
   },
   "add": "Додати",
   "addCongregation": "Додати громаду",
