--- a/src/lib/i18n/en/common.json
+++ b/src/lib/i18n/en/common.json
@@ -55,18 +55,7 @@
 	},
 	"http": "Must begin with `http://` or `https://`",
 	"invalidUrl": "Invalid URL",
-	"locale": {
-		"de": "German",
-		"en": "English",
-		"es": "Spanish",
-		"fr": "French",
-		"he": "Hebrew",
-		"hu": "Hungarian",
-		"nl": "Dutch",
-		"pt": "Portuguese",
-		"ru": "Russian",
-		"uk": "Ukrainian"
-	},
+	"language": "Language",
 	"location": "Location",
 	"menu": "Menu",
 	"name": "Name",
